--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
         "start": "webpack-dev-server --config webpack.config.js --mode development"
     },
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "1.0.0",
+        "@typescript-eslint/parser": "^2.18.0",
         "css-loader": "^3.4.2",
         "eslint": "^6.8.0",
+        "eslint-config-airbnb-base": "^14.0.0",
         "eslint-config-prettier": "^6.9.0",
         "eslint-plugin-import": "^2.20.0",
         "eslint-plugin-prettier": "^3.1.2",
